# OCT_AI

./: .gitignore  DESIGN.md  README.md  main.py  pyproject.toml
data/: README.md  data_description.md
results/: result_description.md
scripts/: convert_medsegbench.py  make_ppt.py  retinal-oct-preprocessing.ipynb
scripts/01_baseline/: methods.py  run_baseline.py  utils.py
scripts/02_synthetic_noise/: noise_model.py  run_synthetic.py  validate_noise.py
scripts/03_sub2full/: dataset.py  model.py  run_sub2full.py
scripts/03_supervised/: dataset.py  run_supervised.py
scripts/04_sr_test/: eval_sr_full.py  test_sr.py
scripts/05_finetune/: run_finetune.py
scripts/06_kfold/: run_kfold.py
scripts/07_dncnn/: model.py  run_dncnn.py
scripts/08_nafnet/: model.py  run_nafnet.py
